Created Basic CSS design and externally linked with html

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE HTML5>
+
 <html>
     <head>
         <title>Sudoku Web</title>
+        <link href="indexStyleSheet.css" rel="stylesheet" type="text/css">
     </head>
     
     <body>
-        <hr>
-        <h3>Sudoku Webapp</h3>
-        <div>
-            <label>Start Game</label>
-            <input type="button"><a href="#"></a>
-            <label>About Us</label>
-            <input type="button"><a href="#"></a>
-            <label>Leader Board</label>
-            <input type="button"><a href="#"></a>
+        <hr class="hr-top">
+        <h1>Sudoku Webapp</h1>
+        <div class="buttons">
+            <input type="button" id="StartButton"><a href="#"></a>
+            <input type="button" id="LeaderBoardButton"><a href="#"></a>
+            <input type="button" id="AboutUsButton"><a href="#"></a>
         </div>
+        <hr class="hr-bottom">
     </body>
 
 </html>
